--- a/Makefile.toml
+++ b/Makefile.toml
@@ -697,22 +697,9 @@ wait_kafka_exit() {
   done
 }
 
-wait_zookeeper_exit() {
-  # Follow zookeeper-server-stop.sh
-  while [[ -n "$(ps ax | grep java | grep -i QuorumPeerMain | grep -v grep | awk '{print $1}')" ]]; do
-    echo "Waiting for zookeeper to exit"
-    sleep 1
-  done
-}
-
 kill_kafka() {
   ${PREFIX_BIN}/kafka/bin/kafka-server-stop.sh
   wait_kafka_exit
-}
-
-kill_zookeeper() {
-  ${PREFIX_BIN}/kafka/bin/zookeeper-server-stop.sh
-  wait_zookeeper_exit
 }
 
 if ! ${TMUX} ls &>/dev/null ; then
@@ -723,7 +710,6 @@ fi
 # Kill other components
 ${TMUX} list-windows -F "#{window_name} #{pane_id}" \
 | grep -v 'kafka' \
-| grep -v 'zookeeper' \
 | awk '{ print $2 }' \
 | xargs -I {} ${TMUX} send-keys -t {} C-c C-d
 
@@ -734,14 +720,11 @@ if [[ -n ${containers} ]]; then
   docker stop ${containers}
 fi
 
-# Kill kafka and zookeeper
+# Kill kafka
 if [[ -n $(${TMUX} list-windows | grep kafka) ]];
 then
   echo "kill kafka"
   kill_kafka || true
-
-  echo "kill zookeeper"
-  kill_zookeeper || true
 
   # Kill their ${TMUX} sessions
   ${TMUX} list-windows -t risedev -F "#{pane_id}" | xargs -I {} ${TMUX} send-keys -t {} C-c C-d
