--- a/java/connector-node/risingwave-connector-service/src/main/resources/sql_server.properties
+++ b/java/connector-node/risingwave-connector-service/src/main/resources/sql_server.properties
@@ -17,3 +17,4 @@ heartbeat.interval.ms=${debezium.heartbeat.interval.ms:-300000}
 name=${hostname}:${port}:${database.name}.${schema.name}.${table.name:-RW_CDC_Sharing}
 # In sharing cdc mode, transaction metadata will be enabled in frontend
 provide.transaction.metadata=${transactional:-false}
+database.encrypt=false
